<resources>
    <string name="app_name">Phone Bill</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="createPhoneCall">Create New Phone Call</string>
    <string name="display">Display Phone Bill</string>
    <string name="search">Search Phone Calls</string>
    <string name="help">Help</string>
    <string name="customer">Customer</string>
    <string name="callerHeading">Caller</string>
    <string name="phoneHint">xxx-xxx-xxxx</string>
    <string name="calleeHeading">Callee</string>
    <string name="startTimeHeading">Call Start</string>
    <string name="endTimeHeading">Call End</string>
    <string name="dateHint">mm/dd/yyyy</string>
    <string name="timeHint">hh:mm</string>
    <string name="suffixHint">am/pm</string>
    <string name="submit">Submit</string>
</resources>