<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <include
        android:id="@+id/include2"
        layout="@layout/content_main" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/create_new_phonecall_button"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginStart="161dp"
            android:layout_marginTop="125dp"
            android:layout_marginEnd="162dp"
            android:text="@string/createPhoneCall"
            app:layout_constraintBottom_toTopOf="@id/display_phonebill_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.943" />

        <Button
            android:id="@+id/display_phonebill_button"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginStart="161dp"
            android:layout_marginEnd="162dp"
            android:layout_marginBottom="356dp"
            android:text="@string/display"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/search_phonecalls_button"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginStart="161dp"
            android:layout_marginEnd="162dp"
            android:layout_marginBottom="232dp"
            android:text="@string/search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/display_phonebill_button"
            app:layout_constraintVertical_bias="0.101" />

        <Button
            android:id="@+id/help_button"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginStart="161dp"
            android:layout_marginEnd="162dp"
            android:layout_marginBottom="232dp"
            android:text="@string/help"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_phonecalls_button"
            app:layout_constraintVertical_bias="0.307" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>


